2003-01-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-ext-url-show): New funcition.
	(mew-w3m-ext-url-fetch): Ditto.
	(top): Modify comment. Avoid byte-compile warning for
	`mew-window-configure'.

2002-12-28  NABEYA Kenichi  <emacs-w3m@nabeken.com>

	* shimbun/sb-mew.el (shimbun-mew-group-url-alist): Update.

2002-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mailman.el (shimbun-mailman-make-contents): Make
	regexps more redundant.

2002-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-savannah.el (shimbun-savannah-x-face-alist): New.

2002-12-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-about-db-history): Display the information of page.

2002-12-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-local-dirlist-cgi): Treat a local cookie.

2002-12-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-x-face-alist): New.

2002-12-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-e21.el (w3m-favicon-type): Change default value and type of
	custom.
	(w3m-favicon-type-alist): New internal variable.
	(w3m-setup-favicon): Don't check 'xpm.
	(w3m-buffer-favicon): Decide image type of Emacs use
	`w3m-favicon-type-alist'.

2002-12-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-impress.el (shimbun-impress-groups-alist): Add url
	for "internet" and "pc".
	(shimbun-index-url): Treat 4th element of
	`shimbun-impress-groups-alist' as index url.
	(shimbun-get-headers): Use `shimbun-expand-url'.

2002-12-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-type): Suppert `stable version notation' of
	w3m-m17n.

2002-12-12  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-use-favicon): Moved from w3m-e21.el.

	* w3m-image.el (w3m-favicon-usable-p): Moved from w3m-e21.el.

	* w3m-e21.el : Bind `w3m-use-favicon' when compiling.
	(w3m-favicon-usable-p): Moved to w3m-image.el.
	(w3m-use-favicon): Moved to w3m.el.

2002-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>
